<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">



<android.support.v7.widget.CardView

    android:layout_height="40sp"
    android:layout_width="fill_parent"
    app:cardBackgroundColor="#ff212121"
    app:cardElevation="4sp"
    android:layout_marginTop="20sp"
    app:cardCornerRadius="2sp"


    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:id="@+id/first"
        android:layout_gravity="center"
        android:text="@string/donations__google_android_market"
       android:textColor="#ffffffff" />





</android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="5dp" >

        <Spinner
            android:id="@+id/donations__google_android_market_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@string/donations__google_android_market_text" />

        <Button
            android:id="@+id/donations__google_android_market_donate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d0b22b"
            android:layout_weight="1"
            android:text="@string/donations__google_android_market_donate_button" />
    </LinearLayout>

</LinearLayout>